--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,11 @@
         <spring.version>4.1.6.RELEASE</spring.version>
         <java.version>1.8</java.version>
         <junit.version>4.12</junit.version>
+    
+             <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+             <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>             
     </properties>
-
+         
     <modules>
         <module>core</module>
         <module>web</module>
