--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,17 @@
                     <artifactId>maven-checkstyle-plugin</artifactId>
                     <version>2.15</version>
                 </plugin>
+<plugin>
+    <groupId>org.apache.tomcat.maven</groupId>
+    <artifactId>tomcat7-maven-plugin</artifactId>
+    <version>2.1</version>
+    <configuration>
+        <url>http://tomcat:8080/manager/text</url>
+        <path>teste</path>
+        <username>tomcat</username>
+        <password>tomcat</password>
+    </configuration>
+</plugin>                     
             </plugins>
         </pluginManagement>
     </build>
